--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <meta http-equiv='expires' content='0'>
   <meta http-equiv='pragma' content='no-cache'>
   <title>LA County Vis</title>
-
+  <script src='https://unpkg.com/@turf/turf@6/turf.min.js'></script>
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Open+Sans+Condensed:300,700|Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
